Brutal Java 16 patch